--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [project]
 name = "pyjoy"
 version = "0.1.0"
-description = "An accurate Python implementation of the Joy programming language"
-readme = "docs/pyjoy.md"
+description = "A Python implementation of the Joy programming language"
+readme = "README.md"
 requires-python = ">=3.13"
 dependencies = []
 
