--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -11,7 +11,43 @@ on: [workflow_dispatch]
 
 jobs:
   test:
-    name: Test on ${{ matrix.os }}
+    name: Unit Tests (${{ matrix.os }})
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python 3.13
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.13'
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
+        with:
+          version: "latest"
+
+      - name: Install dependencies
+        run: uv sync
+
+      - name: Run pytest
+        run: uv run pytest -v
+
+      - name: Upload test results
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: test-results-${{ matrix.os }}
+          path: |
+            .pytest_cache/
+          retention-days: 7
+
+  joy-compliance:
+    name: Joy Compliance (${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -48,23 +84,13 @@ jobs:
             exit 1
           fi
 
-      - name: Run pytest
-        run: uv run pytest -v
-
       - name: Run Joy test suite (Python interpreter)
+        continue-on-error: true
         run: uv run pyjoy test tests/joy -v
 
       - name: Run Joy test suite (C backend)
+        continue-on-error: true
         run: uv run pyjoy test tests/joy --compile -v
-
-      - name: Upload test results
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: test-results-${{ matrix.os }}
-          path: |
-            .pytest_cache/
-          retention-days: 7
 
   build:
     name: Build package
